# AlgoShiz

./: .gitignore  AlgoShiz.sln  AlgoShiz.vcxproj  AlgoShiz.vcxproj.filters  Average.hpp  CMakeLists.txt  README.md
.github/workflows/: VSTest.yml  msbuild.yml
AlgoShiz/: AlgoShiz.vcxproj.filters  README.md  algoshiz.vcxproj
AlgoShiz/Arrays/: Utils.hpp
AlgoShiz/Math/: Average.hpp  DCT.hpp  Division.hpp  Factorization.hpp  Fibonacci.hpp  Power.hpp  Similarity.hpp  Sqrt.hpp  Utils.hpp
AlgoShiz/Search/: BinarySearch.hpp
AlgoShiz/Sorts/: BeadSort.hpp  BucketSort.hpp  CombSort.hpp  CountingSort.hpp  GnomeSort.hpp  HeapSort.hpp  InsertionSort.hpp  MergeSort.hpp  QuickSort.hpp  RadixSort.hpp  SelectionSort.hpp  ShakerSort.hpp  StrandSort.hpp
AlgoShiz/Structures/: Vector.hpp
AlgoShiz_Tests/: AlgoShiz_Tests.cpp  AlgoShiz_Tests.vcxproj  AlgoShiz_Tests.vcxproj.filters  MathTests.cpp
AlgoShiz_Tests/Math/: Average.cpp  Division.cpp  Factirization.cpp  Factorial.cpp  Fibonacci.cpp  Integration.cpp  Power.cpp  Sqrt.cpp  Utils.cpp
AlgoShiz_Tests/Search/: SearchesTests.cpp
AlgoShiz_Tests/Sorts/: SortsTests.cpp
Arrays/: Generator.hpp  Utils.hpp
Events/: Event.hpp
Math/: Average.hpp  DCT.hpp  Differentiation.hpp  Division.hpp  Factorial.hpp  Factorization.hpp  Fibonacci.hpp  GCD.hpp  Gamma.hpp  Integration.hpp  Interpolation.hpp  LCM.hpp  Power.hpp  README.html  README.md  SLAE.hpp  Similarity.hpp  Sqrt.hpp
Search/: LinearSearch.hpp
Sorts/: BeadSort.hpp  BubbleSort.hpp  QuickSort.hpp  RadixSort.hpp
Structures/: LinkedList.hpp  Vector.hpp
(+1 files in other folders)
